feat(helix): extend onboarding and runtime workflows